# lerobot-teleoperator-galaxea-a1-so-leader

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
lerobot_teleoperator_galaxea_a1_so_leader/: __init__.py  config_galaxea_a1_so_leader.py  galaxea_a1_so_leader.py
tests/: test_teleoperator_plugin.py
